created session on login

--- a/instagram-oauth-app/backend/.env
+++ b/instagram-oauth-app/backend/.env
@@ -13,3 +13,5 @@ DB_PORT=5432                # Default PostgreSQL port
 DB_NAME=inlights            # Name of the database
 DB_USER=postgres            # Database username
 DB_PASSWORD=Skadoodle@01   # Database user's password
+
+secret_key=inlights # Name of the secret key
